# git-flow-example

./: CMakeLists.txt  README.md
cmake/modules/: GetGitRevision.cmake  version.c.in  version.h.in
src/: add.c  main.c
